@@ -15,7 +15,8 @@ Synopsis
 
 .. code-block::
 
-    gdal_edit [--help-general] [-ro] [-a_srs srs_def] [-a_ullr ulx uly lrx lry]
+    gdal_edit [--help-general] [-ro] [-a_srs srs_def]
+            [-a_ullr ulx uly lrx lry] [-a_ulurll ulx uly urx ury llx lly]
             [-tr xres yres] [-unsetgt] [-unsetrpc] [-a_nodata value] [-unsetnodata]
             [-unsetstats] [-stats] [-approx_stats]
             [-setstats min max mean stddev]
@@ -63,6 +64,14 @@ It works only with raster formats that support update access to existing dataset
 .. option:: -a_ullr ulx uly lrx lry:
 
     Assign/override the georeferenced bounds of the dataset.
+
+.. option:: -a_ulurll ulx uly urx ury llx lly:
+
+    Assign/override the georeferenced bounds of the dataset from three points:
+    upper-left, upper-right and lower-left. Unlike :option:`-a_ullr`, this also
+    supports rotated datasets (edges not parallel to coordinate system axes).
+
+    .. versionadded:: 3.1
 
 .. option:: -tr <xres> <yres>
 
@@ -180,7 +189,7 @@ It works only with raster formats that support update access to existing dataset
 
     .. versionadded:: 2.0
 
-The :option:`-a_ullr`, :option:`-tr` and :option:`-unsetgt` options are exclusive.
+The :option:`-a_ullr`, :option:`-a_ulurll`, :option:`-tr` and :option:`-unsetgt` options are exclusive.
 
 The :option:`-unsetstats` and either :option:`-stats` or :option:`-approx_stats` options are exclusive.
 
